--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "sansanshow <sansan_show@126.com>",
   "private": true,
   "scripts": {
-    "dev": "node --inline --hot build/dev-server.js",
+    "dev": "node build/dev-server.js",
     "build": "node build/build.js",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "e2e": "node test/e2e/runner.js",
